projet_GOCass/tests/bad/testfile-not-returning-else.go
package main

func foo () int { if (3 > 2) {return 3} }

func main () {}
